# DM_CAS

./: .gitignore  README.md  build.sh  project_map.txt
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp  parser_structure.txt
src/include/: Integer.h  Interactive_shell.h  Natural.h  Parser.h  Polynomial.h  Rational.h  algo.h  backend.h  frontend.h
src/lib/: Integer.cpp  Interactive_shell.cpp  Natural.cpp  Parser.cpp  Polynomial.cpp  Rational.cpp  algo.cpp  backend.cpp  frontend.cpp
src/tests/: Integer_test.cpp  Integer_test.cpp.old  Natural_test.cpp  Natural_test.cpp.old  Parser_test.cpp  Polynomial_test.cpp  Rational_test.cpp  backend_test.cpp
